Key header file overloading operatorsTime header file

--- a/ADS_CA2_Tree/ADS_CA2_Tree.vcxproj.filters
+++ b/ADS_CA2_Tree/ADS_CA2_Tree.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Key.h">
       <Filter>Header Files\Data</Filter>
     </ClInclude>
+    <ClInclude Include="StringUtilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
