--- a/ADS_CA2_Tree/ADS_CA2_Tree.vcxproj
+++ b/ADS_CA2_Tree/ADS_CA2_Tree.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="Date.h" />
     <ClInclude Include="Car.h" />
     <ClInclude Include="Key.h" />
+    <ClInclude Include="StringUtilities.h" />
     <ClInclude Include="TNode.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
